--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid d-flex justify-content-center">
-                <a href="index.html" class="navbar-brand"><img src="img/logotipo.png" alt=""></a>
+                <a href="index.html" class="navbar-brand"><img src="img/Logotipo.png" alt=""></a>
        
                 
                 </div>
